# ai-note-summarizer

./: .gitignore  DEVELOPMENT.md  README.md  outfile.txt  pyproject.toml  requirements.txt
exports/: AI_Generated_Quiz_deck.apkg  export_20251218_115014.html  export_20251218_115014.json  export_20251218_115014.md  export_20251218_115032.html  export_20251218_115032.json  export_20251218_115032.md
src/: __init__.py
src/ai_summarizer/: __init__.py
src/ai_summarizer/export/: __init__.py  anki_exporter.py  exportation.py
src/ai_summarizer/quiz/: generator.py  test_quiz.py
src/ai_summarizer/summarization/: __init__.py  models.py  summarizer.py
src/ai_summarizer/tolongstring/: test.py
src/ai_summarizer/web/: __init__.py  app.py
src/ai_summarizer/web/templates/: index.html
src/export/: README.md  __init__.py  anki_exporter.py  exportation.py
src/quiz/: README.md  __init__.py  generator.py  models.py  outfile.txt  test_quiz.py  test_text.py
src/summarization/: README.md  __init__.py  models.py  summarizer.py
src/tolongstring/: pdf_to_string.py  test.py
src/web/: README.md  app.py
src/web/templates/: attempt.html  result.html  webpage.html
tests/: test_exports.py
